Fix contact information Mobile view

--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -290,35 +290,25 @@
                 margin-right: auto;
                 &--bottom{
                     display: grid;
-                    grid-template-columns: 100%;
-                    
-                    margin-bottom: 48px;
-                    padding-bottom:1.3rem;
+                    grid-template-columns: 20% 80%;
+                    grid-template-rows: max-content max-content;
+                    margin-bottom: 24px;
                     i{
-                        grid-row: 1/2;
+                        grid-row: 1/3;
                         grid-column: 1/2;
-                        margin-left: auto;
-                        margin-right: auto;
                     }
                     h1{
-                       
-                        text-align: center; 
+                        grid-row: 1/2;
+                        grid-column: 2/3;
                         margin-bottom: 16px;
-                      
-    
-                    }
-                    .email{
+                        margin: auto;
                         display: block;
-                        margin-bottom: 8px;
-                       text-align: center;
-                       
-                     
                     }
                     a{
+                        grid-row: 2/3;
+                        grid-column: 2/3;
+                        margin: auto;
                         display: block;
-                        margin-right: auto;
-                        margin-left: auto;
-                       
                     }
                    
                         
